# busman

./: .gitignore  README.md  index.html  latest.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: publish-desktop.yml
scripts/: bump-version.ts  prepare-worker-sidecar.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: crypto.rs  error.rs  lib.rs  main.rs  models.rs  store.rs
src-tauri/src/commands/: connections.rs  entities.rs  files.rs  mod.rs  operations.rs  script.rs  worker.rs
src-tauri/worker-go/: go.mod  handlers.go  handlers_admin.go  handlers_test.go  main.go
src/components/Common/: AboutModal.tsx  FormControls.tsx  Icon.tsx  Sparkline.tsx  WorkerNotFoundBanner.tsx
src/components/Connections/: ConnectionForm.tsx  ConnectionManager.tsx  ExportConnectionsModal.tsx  ImportConnectionsModal.tsx
src/components/Explorer/: ConnectionsModal.tsx  ConnectionsPanel.tsx  CreateEntityModal.tsx  (+24 more)
src/hooks/: useAutoRefresh.test.ts  useAutoRefresh.ts  useConnections.test.ts  useConnections.ts  useDlqAlerts.test.ts  useDlqAlerts.ts  useEntityList.test.ts  useEntityList.ts  useEntityProperties.test.ts  useEntityProperties.ts  useEscapeKey.test.ts  useEscapeKey.ts  useMessageTemplates.test.ts  useMessageTemplates.ts  useResizable.test.ts  useResizable.ts  useScript.test.ts  useScript.ts
src/i18n/: index.ts
src/schemas/: ipc.test.ts  ipc.ts
src/store/: appStore.test.ts  appStore.ts
src/types/: index.ts
src/utils/: color.test.ts  color.ts  connection.test.ts  connection.ts  exitCode.test.ts  exitCode.ts  subscriptionRules.test.ts  subscriptionRules.ts
(+2 files in other folders)
